Add place buy order command
